--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -81,7 +81,7 @@
       <p style="font-size:30px">-------------------------------------------------------------------------------------------------------</p>
       <div class="pure-g">
         <div class="pure-u-1-1 small-font">
-          <p>This visualisation is created by <a href="https://fit3179.github.io/Vega-Lite/" target="_blank">Zhongxun Pan</a>.</p>
+          <p>This visualisation is created by Zhongxun Pan.</p>
         </div>
       </div>
     </div>
